move to use html5 (article, section, summary, nav, aside) fixed sidebar on mobile

--- a/layout.css
+++ b/layout.css
@@ -131,7 +131,6 @@ body {
 #sidebar {
   width: 30%;
   height: 100%;
-  float: right;
   overflow: hidden;
   padding: 0em;
   margin: 0em;
