--- a/mobile.css
+++ b/mobile.css
@@ -4,12 +4,11 @@ body{
   max-width: 100%;
 }
 
-#main {
-  width: 100%;
-}
-
 #container {
   margin: 0em;
   width: 100%;
 }
 
+#sidebar {
+  display: none;
+}
