--- a/wide-screen.css
+++ b/wide-screen.css
@@ -45,5 +45,5 @@ body{
 }
 
 #contents {
-/*  border-bottom-width: 1px;*/
+  border-bottom-width: 1px;
 }
